
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MOD 0.9.5 beta 4 (rev 1606 - October 3, 2006)
====================================

* Fix for IE styling issues in file manager
* Amend getUserData() in document parser so the include filename respects case-sensitivity.
* Changed phpSniff include in getUserData.extender.php to use $modx->config['base_path'] and not $modx->getManagerPath() so the full path to the file is used.
* Added Jot 1.0 and updated eFormt to release 1.3 (1602)
* Change Tiny MCE plugin to use relative URLs, set default theme to MODx Light  and set RTE to Tiny MCE for new installs (1596)
* Revise top-level manager menu oreder; move clear cache back to site menu (with preview site menu item) (1588)
* Replace original MODx theme with MODxLightBlue (1586)
* Fix for the file manager to allow for filetype setting changes in the system configuration. (1585)
* Added an optional $fields parameter to the DBAPI delete function. While not necessary in most cases, it allows for more complex multi-table deletes that use joins. (1558)
* Fix JS debug errors when no submenu is present for an item in the MODxHost dropdown menu. (1570)
* Remove double headings where appropriate, also removed some remaining references to _tx_.gif for the headings (will allow all remaining headings to get consistent styling). (1567,1568)
* Lots of minor bugfixes and tweaks to the DocManager module. (1565,1566)
* Stop header.inc.php and footer.inc.php being included when running a module. (1562)
* Remove message count from the topbar header (1557)
* Remove JS functions/calls to non-existant "Sync" in manager (1556)
* Fix warnings with auto-loaded modules (1556)
* Fixed default manager_theme selection when added new manager users. (1552)
* Update AjaxSearch to most recent version. (1550)