@@ -168,12 +168,12 @@ class synccache{
 
 		// WRITE system event triggers
 		$sql = "
-			SELECT sysevt.name as 'evtname', pe.pluginid, plugs.name 
-			FROM $dbase.".$table_prefix."system_eventnames sysevt 
-			INNER JOIN $dbase.".$table_prefix."site_plugin_events pe ON pe.evtid = sysevt.id 
-			INNER JOIN $dbase.".$table_prefix."site_plugins plugs ON plugs.id = pe.pluginid 
-			WHERE plugs.disabled=0 
-			ORDER BY sysevt.name,pe.pluginid
+			SELECT sysevt.name as 'evtname', pe.pluginid, plugs.name
+			FROM $dbase.".$table_prefix."system_eventnames sysevt
+			INNER JOIN $dbase.".$table_prefix."site_plugin_events pe ON pe.evtid = sysevt.id
+			INNER JOIN $dbase.".$table_prefix."site_plugins plugs ON plugs.id = pe.pluginid
+			WHERE plugs.disabled=0
+			ORDER BY sysevt.name,pe.priority
 		";
 		$events = array();
 		$rs = mysql_query($sql);
